--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -544,25 +544,23 @@ hr {
   padding: 2px;
   background-color: #636363;
 }
-.post_text {
-  border-color: transparent;
-  font-size: 20px;
-  padding: 5%;
-}
 .post_text p {
-  margin: auto;
-  text-align: justify;
-  text-justify: inter-word;
-  margin-bottom: 20px;
+  margin: auto; /* Centers the paragraph horizontally */
+  text-align: justify; /* Justifies the text to fill the available width */
+  margin-bottom: 10px; /* Adds a bottom margin of 20px */
   font-size: 19px;
+  text-justify: none !important; /* Sets the font size to 19px */
 }
 
+.post_text {
+  padding: 5%;
+}
 @media (max-width: 768px) {
   .post_text p {
-    text-align: left;
-    word-spacing: -0.25px;
+    text-align: start;
   }
 }
+
 .post_text iframe {
   margin: 5% 0 5% 0;
   width: 100%;
