--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -402,11 +402,10 @@ hr {
 }
 
 .post_text figure img {
-  width: 70%;
+  width: 100%;
+  height: 100% !important;
   display: block;
   margin: 0 auto;
-  border-radius: 10px;
-  background-color: #333;
 }
 
 .posts img {
@@ -573,13 +572,19 @@ hr {
   margin: 0.4rem 0;
 }
 
-.post_text figure img {
-  width: 80%;
-  margin: auto;
-  border-radius: 10px;
-  background-color: #333;
-}
+.post_text figure {
+  width: 30%;
 
+  float: left;
+  height: 100%;
+  margin-right: 15px;
+  margin-top: 10px;
+}
+.post_text figure figcaption {
+  padding: 3%;
+  font-size: 16px;
+  background-color: #373d41;
+}
 .posts img {
   width: 100px;
   margin-right: 10px;
