--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -547,10 +547,10 @@ hr {
   text-align: justify;
   margin-bottom: 10px;
   font-size: 18px;
-  letter-spacing: 0.2px;
+  letter-spacing: 0.1px;
   line-height: 1.4;
   text-align-last: left;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .post_text {
