--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -543,7 +543,7 @@ hr {
   background-color: #636363;
 }
 .post_text p {
-  text-align: justify;
+  text-align: left;
   font-size: 17px;
   letter-spacing: 0.4px;
   line-height: 1.4;
