--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -129,6 +129,10 @@ li > a:only-child:after {
   .postPage .midcolumn {
     margin-top: 35% !important;
     padding: 0 !important;
+    padding: 5%;
+  }
+  .post_text {
+    padding: 5%;
   }
   .donate-popup {
     position: absolute;
