--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -401,7 +401,7 @@ hr {
 }
 
 .post_text figure img {
-  width: 100%;
+  width: 1000% !important;
   height: 100% !important;
   display: block;
   margin: 0 auto;
