--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -171,6 +171,12 @@ body {
 }
 
 @media screen and (max-width: 650px) {
+  figure {
+    width: 100% !important;
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+
   ::-webkit-scrollbar {
     display: none;
   }
