--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -240,7 +240,8 @@ li > a:only-child:after {
   nav {
     background-color: #212121;
     padding: 2%;
-    position: fixed;
+    position: absolute;
+
     top: 0;
     margin: 0px !important;
     z-index: 1000;
