--- a/styles/footer.css
+++ b/styles/footer.css
@@ -113,8 +113,9 @@
 }
 
 .footer h2 {
+  display: flex;
+  flex-direction: column;
   color: #fff;
-  font-size: 36px;
   font-weight: normal;
   margin: 0;
 }
