--- a/styles/runes.scss
+++ b/styles/runes.scss
@@ -8,7 +8,7 @@ table {
 }
 
 caption {
-  background-color: #5a5a5a;
+  background: linear-gradient(#262626, #333, #5a5a5a);
   padding: 1rem;
   font-size: 1.5rem;
   font-weight: 900;
