--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -401,7 +401,7 @@ hr {
 }
 
 .post_text figure img {
-  width: 100% !important;
+  max-width: 100% !important;
   height: 100% !important;
   display: block;
   margin: 0 auto;
@@ -575,6 +575,9 @@ hr {
   height: 100%;
   margin-right: 15px;
   margin-top: 10px;
+}
+.modal figure {
+  width: 100% !important;
 }
 .post_text figure figcaption {
   padding: 3%;
