--- a/styles/landingPage.scss
+++ b/styles/landingPage.scss
@@ -213,7 +213,7 @@
   background-size: 100% 100%;
   background-position: center;
 }
-img {
+.post_text img {
   border: 0;
   max-width: 100%;
   vertical-align: middle;
