--- a/styles/modal.css
+++ b/styles/modal.css
@@ -63,16 +63,23 @@ span.psw {
   position: fixed;
   width: 100%;
   height: 100%;
-  overflow: hidden !important;
+  overflow: auto;
   background-color: #262626;
   top: 0;
+  left: 0;
   background-repeat: no-repeat;
   background-size: cover;
+  align-items: center;
+  text-align: center;
 }
 .modal-content {
-  background-color: #fefefe;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: auto;
 
-  margin-bottom: 100px;
+  box-sizing: border-box;
 }
 
 .animate {
@@ -108,6 +115,13 @@ span.psw {
   }
   .modal-content {
     width: 80% !important;
+  }
+  .modal img {
+    width: 100% !important;
+    height: 400px !important;
+    position: absolute;
+    top: 100px;
+    left: 0;
   }
   .modal {
     background-image: none !important;
