--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -554,6 +554,9 @@ hr {
   blockquote {
     width: 100% !important;
   }
+  .post_text figure {
+    width: 100% !important;
+  }
 }
 
 .post_text iframe {
