add comment rules

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -535,6 +535,7 @@ textarea {
   width: 100%;
   height: 400px;
   margin: auto;
+  margin-bottom: 2px;
 }
 .user-popup-button {
   background-color: #09f;
