--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -403,7 +403,7 @@ hr {
 
 .post_text figure img {
   max-width: 100% !important;
-  height: 100% !important;
+  height: auto !important;
   display: block;
   margin: 0 auto;
 }
