add author profiles

--- a/styles/about.css
+++ b/styles/about.css
@@ -97,13 +97,12 @@ i {
 }
 
 .staffCard {
-  background: rgb(55, 53, 52);
-  border-radius: 10px;
+  border-radius: 10% 10% 0 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+  background-color: #282828;
   transition: 0.3s;
 }
 
