--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -550,6 +550,9 @@ textarea {
   .donate-button ul {
     width: 100% !important;
   }
+  .profile-info {
+    padding: 12% !important;
+  }
   .user-popup {
     width: 100% !important;
     height: 100vh !important;
