--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -552,6 +552,7 @@ textarea {
   }
   .profile-info {
     padding: 12% !important;
+    margin-top: 5%;
   }
   .user-popup {
     width: 100% !important;
