--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -550,6 +550,9 @@ textarea {
   .donate-button ul {
     width: 100% !important;
   }
+  #profilePage {
+    margin-top: 15% !important;
+  }
   .profile-info {
     padding: 12% !important;
     margin-top: 5%;
