--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
-/*global*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
